WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191180
[iOS] Changing view scale sometimes does not zoom the page to the new initial scale, when the page is at initial scale
https://bugs.webkit.org/show_bug.cgi?id=191180
Summary
[iOS] Changing view scale sometimes does not zoom the page to the new initial...
Wenson Hsieh
Reported
2018-11-01 20:50:33 PDT
Example: <meta name="viewport" content="width=device-width, initial-scale=0.94, minimum-scale=0.94"> Expected minimum and initial scales: 0.94 Observed minimum and initial scales: 0.9415 (tested on iPhone SE simulator)
Attachments
Patch
(13.22 KB, patch)
2018-11-01 21:48 PDT
,
Wenson Hsieh
simon.fraser
: review+
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(2.87 MB, application/zip)
2018-11-01 22:59 PDT
,
EWS Watchlist
no flags
Details
Patch for landing
(13.47 KB, patch)
2018-11-02 10:32 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-11-01 20:51:35 PDT
<
rdar://problem/45744786
>
Wenson Hsieh
Comment 2
2018-11-01 21:48:32 PDT
Created
attachment 353679
[details]
Patch
EWS Watchlist
Comment 3
2018-11-01 22:59:17 PDT
Comment on
attachment 353679
[details]
Patch
Attachment 353679
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9826500
New failing tests: http/tests/security/anchor-download-block-crossorigin.html
EWS Watchlist
Comment 4
2018-11-01 22:59:19 PDT
Comment hidden (obsolete)
Created
attachment 353682
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Simon Fraser (smfr)
Comment 5
2018-11-02 09:57:26 PDT
Comment on
attachment 353679
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=353679&action=review
> Source/WebCore/ChangeLog:3 > + [iOS] Viewport tag with minimum-scale sometimes causes the minimum scale to be close to the specified value
This should say "close to but not exactly" or something. This also doesn't seem to describe the real user-facing impact of the bug.
Wenson Hsieh
Comment 6
2018-11-02 10:13:33 PDT
Comment on
attachment 353679
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=353679&action=review
>> Source/WebCore/ChangeLog:3 >> + [iOS] Viewport tag with minimum-scale sometimes causes the minimum scale to be close to the specified value > > This should say "close to but not exactly" or something. > > This also doesn't seem to describe the real user-facing impact of the bug.
Sounds good — changed the title to reflect the real user-facing impact.
Wenson Hsieh
Comment 7
2018-11-02 10:32:28 PDT
Created
attachment 353710
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2018-11-02 11:10:32 PDT
Comment on
attachment 353710
[details]
Patch for landing Clearing flags on attachment: 353710 Committed
r237743
: <
https://trac.webkit.org/changeset/237743
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug