LayoutTests/resources/ui-helper.js
@@ -306,7 +306,7 @@ window.UIHelper = class UIHelper {
         return new Promise(resolve => {
             testRunner.runUIScript(`(() => {
                 uiController.uiScriptComplete(uiController.zoomScale);
-            })()`, resolve);
+            })()`, scaleAsString => resolve(parseFloat(scaleAsString)));
         });
     }
 
@@ -360,5 +360,17 @@ window.UIHelper = class UIHelper {
             return Promise.resolve();
 
         return new Promise(resolve => testRunner.runUIScript(`uiController.resignFirstResponder()`, resolve));
+    }
+
+    static minimumZoomScale()
+    {
+        if (!this.isWebKit2())
+            return Promise.resolve();
+
+        return new Promise(resolve => {
+            testRunner.runUIScript(`(() => {
+                uiController.uiScriptComplete(uiController.minimumZoomScale);
+            })()`, scaleAsString => resolve(parseFloat(scaleAsString)))
+        });
     }
 }
